testsuite/tests/typecheck/should_fail/tcfail181.stderr

tcfail181.hs:17:9: error:
    Could not deduce (Monad m0) arising from a use of ‘foo’
    from the context: Monad m1
      bound by the inferred type of
               wog :: Monad m1 => t0 -> Something (m1 Bool) e0
      at tcfail181.hs:17:1-30
    The type variable ‘m0’ is ambiguous
    Note: there are several potential instances:
      instance Monad Maybe -- Defined in ‘GHC.Base’
      instance Monad IO -- Defined in ‘GHC.Base’
      instance Monad ((->) r) -- Defined in ‘GHC.Base’
      ...plus two others
    In the expression: foo
    In the expression: foo {bar = return True}
    In an equation for ‘wog’: wog x = foo {bar = return True}
